test_suite/tests/ui/identifier/not_unit.stderr
error: #[serde(other)] must be on a unit variant
  --> $DIR/not_unit.rs:12:10
   |
12 | #[derive(Deserialize)]
   |          ^^^^^^^^^^^

error: aborting due to previous error

